# services-router-rules

./: .gitlab-ci.yml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/services/: router_rules.py
